# RAG-from-scratch

./: README.md  local_settings.json  main.py  pyproject.toml  repo_settings.json  requirements.txt
projects/Retrieval-Augmented Generation (RAG)/bm25-war/: bm25.py  dummy_data.py  explanation.ipynb  pdf_loader.py  rag_pipeline.py  wiki-dump.json
projects/practice_ds/: ds_practice.ipynb
projects/practice_python/: practice.ipynb
