[project]
name = "bull-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "groq>=1.1.2",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.13.0.90",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pandas-stubs>=3.0.0.260204",
    "pillow>=12.1.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "types-requests>=2.32.4.20260107",
    "types-setuptools>=82.0.0.20260210",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
